samples/_failures_safe/1761557833_de5fe1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4f756951.c: In function ‘main’:
./samples/SAFE/__tmp_4f756951.c:167:37: error: expected ‘)’ at end of input
  167 |     print_tokens(tokens, token_count
      |                 ~                   ^
      |                                     )
./samples/SAFE/__tmp_4f756951.c:167:5: error: expected declaration or statement at end of input
  167 |     print_tokens(tokens, token_count
      |     ^~~~~~~~~~~~
